--- a/prueba.html
+++ b/prueba.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="prueba.css">
 </head>
 <body>
-    <h1>este es elnombre del evento</h1>
-    <p>esta es la fecha</p>
 
-    <a href="signup.html">Ingresa aqui para registrarte</a>
+<h1>hola mundo</h1>
 </body>
 </html>
