Añadido tituloLogo del proyecto y ul a minusculas

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <div class="body">
         <header>
             <nav>
-                <h1>TITULO</h1>
+                <h1>EventInfo</h1>
                 <ul>
-                    <li><a href="#">INICIO</a></li>
-                    <li><a href="#">AHORA MISMO</a></li>
-                    <li><a href="#">PRÓXIMAMENTE</a></li>
-                    <li><a href="#">INICIA SESIÓN</a></li>
+                    <li><a href="#">inicio</a></li>
+                    <li><a href="#">Ahora mismo</a></li>
+                    <li><a href="#">Próximamente</a></li>
+                    <li><a href="#">Inicia sesión</a></li>
                 </ul>
             </nav>
         </header>  
