--- a/a.html
+++ b/a.html
@@ -248,7 +248,7 @@
             event.preventDefault(); // Evita que se envíe el formulario
             alert('¡Gracias por registrarte!'); // Muestra el mensaje de agradecimiento
             setTimeout(function() {
-                window.location.href = 'prueba.html'; // Redirige a login.html después de 3 segundos
+                window.location.href = 'login.html'; // Redirige a login.html después de 3 segundos
             }, 300); // Ajusta el tiempo según tus necesidades
         });
 
