--- a/a.html
+++ b/a.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="inscripcion.css">
+    <link rel="stylesheet" href="css/inscripcion.css">
     <link rel="shortcut icon" href="https://prep20202.usc.edu.co/pluginfile.php/1/theme_edumy/favicon/1724452750/logo%20Acreditaci%C3%B3n%20Institucional.png">
 
     <title>Regístrate</title>
