--- a/a.html
+++ b/a.html
@@ -62,11 +62,11 @@
 </head>
 <body>
 <div class="d-lg-flex half">
-    <div class="bg order-2 order-md-1" style="background-image: url('img/photo-1708549566274-638eb2d2108b.jpeg'); position: relative; height: 100vh;">
-        <img src="img/cepeda.jpg" alt="Logo" style="position: absolute; top: 40%; left: 50%; transform: translate(-50%, -100%); width: 500px; height: auto; border-radius: 18px;">
-        <h2 style="position: absolute; top: 49%; left: 15%; transform: translate(-50%, -100%); color: white; font-size: 25px;"><strong>Festival de Rock <br>USC 2024</strong></h2>
-        <h2 id="event-entry" style="position: absolute; top: 46%; right: 0%; transform: translate(-50%, -100%); color: white; font-size: 25px;">Entrada Libre</h2>
-        <div style="position: absolute; bottom: 200px; left: 0; right: 0; padding: 0 20px;">
+    <div class="bg order-2 order-md-1" style="background-color: #0b8237; position: relative; height: 100vh;">
+        <img src="img/cepeda.jpg" alt="Logo" style="position: absolute; top:24%; left: 50%; transform: translate(-50%, -100%); width: 90%; height: 297px; border-radius: 18px; margin-top: 140px;">
+        <h2 style="position: absolute; top: 57%; left: 20%; transform: translate(-50%, -100%); color: white; font-size: 25px; "><strong>Festival de Rock USC <br>2024</strong></h2>
+        <h2 id="event-entry" style="position: absolute; top: 53%; right: 0%; transform: translate(-50%, -100%); color: white; font-size: 25px;">Entrada Libre</h2>
+        <div style="position: absolute; bottom: 135px; left: 0; right: 0; padding: 0 20px;">
             <div style="background-color: rgba(141, 197, 159, 0.8); padding: 20px; border-radius: 8px; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); text-align: center; display: flex; justify-content: space-between; align-items: center;">
                 <div style="flex: 1; text-align: left;">
                     <h3 id="event-date" style="margin: 0;">Fecha: 15 de septiembre, 2024</h3>
@@ -84,7 +84,7 @@
         </div>
         
         
-        <div style="position: absolute; bottom: 40px; left: 0; right: 0; padding: 20px; color: rgb(255, 255, 255);background-color: rgba(21, 125, 17, 0.8); border-radius: 8px; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);">
+        <div style="position: absolute; bottom: 0px; left: 0; right: 0; padding: 20px; color: rgb(255, 255, 255);background-color: rgba(21, 125, 17, 0.8); border-radius: 8px; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);">
             <h2 style="text-align: center; margin-top: 0;"><strong>About This</strong></h2>
             <p style="text-align: justify; margin-bottom: 0; color: rgb(255, 255, 255);">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur non libero vel eros accumsan egestas. Nulla facilisi. Proin vel lacus vel elit luctus luctus a sit amet ligula.
