--- a/a.html
+++ b/a.html
@@ -65,23 +65,46 @@
         .check {
             margin: 0 10px;
         }
+
+        .circle{
+            height: 15px;
+            width: 15px;
+            background-color: green;
+            border-radius: 50%;
+        }
     </style>
 </head>
 <body>
 <div class="d-lg-flex half">
-    <div class="bg order-2 order-md-1" style="background-color: #0b8237; position: relative; height: 100vh;">
+    <div class="bg order-2 order-md-1" style="background-color: #0b8237; position: relative; height: 100.7vh; width: 850px;">
         <img src="img/cepeda.jpg" alt="Logo" style="position: absolute; top:25%; left: 50%; transform: translate(-50%, -100%); width: 94%; height: 293px; border-radius: 18px; margin-top: 143px;">
         <h2 style="position: absolute; top: 57%; left: 20%; transform: translate(-50%, -100%); color: white; font-size: 25px;"><strong>Festival de Rock USC <br>2024</strong></h2>
-        <h2 id="event-entry" style="position: absolute; top: 53%; right: 0%; transform: translate(-50%, -100%); color: white; font-size: 25px;">Entrada Libre</h2>
+        <h2 id="event-entry" style="position: absolute; top: 53%; right: 0%; transform: translate(-50%, -100%); color: white; font-size: 25px; font-weight: bold;">Entrada Libre</h2>
         <div style="position: absolute; bottom: 135px; left: 0; right: 0; padding: 0 20px;">
             <div style="background-color: rgba(141, 197, 159, 0.8); padding: 20px; border-radius: 8px; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); text-align: center; display: flex; justify-content: space-between; align-items: center;">
                 <div style="flex: 1; text-align: left;">
-                    <h3 id="event-date" style="margin: 0;">Fecha: 15 de septiembre, 2024</h3>
-                    <h3 id="event-location" style="margin: 0;">Ubicación: Cali, Colombia</h3>
-                    <h3 id="event-time" style="margin: 0;">Hora: 10:00 AM</h3>
+                    <div style="display: inline-flex; align-items: center;">
+                        
+                        <img src="img/image-removebg-preview.png" height="32">
+                        <h3 id="event-date" style="font-size: 24px; font-weight: bold; margin: 0;">Fecha: 15 de septiembre, 2024</h3><br>
+                    </div>
+
+                    <div style="display: inline-flex; align-items: center;">
+                        <img src="img/9d3a9a0b913e1c02927ef8ab6a6177e6-removebg-preview.png" height="32">
+                        <h3 id="event-location" style="font-size: 24px; font-weight: bold; margin: 0;">Ubicación: Cali, Colombia</h3>
+                    </div><br>
+
+                    <div  style="display: inline-flex; align-items: center;">
+                        <img src="img/image-removebg-preview (1).png" height="30">
+                        <h3 id="event-time" style="font-size: 24px; font-weight: bold; margin: 0;">Hora: 10:00 AM</h3>
+                    </div>
                 </div>
                 <div style="text-align: center;">
-                    <h2 id="event-status" style="color: green; margin: 0;">Inscripciones abiertas</h2><br><br>
+                    <div style="display: inline-flex; align-items: center;">
+                        <h2 id="event-status" style="color: rgb(246, 246, 246); margin: 0;">Inscripciones abiertas</h2><br><br>
+                        <div class="circle"></div>
+                    </div><br>
+
                     <div style="display: inline-flex; align-items: center;">
                         <img src="img/avatar-default-removebg-preview.png" alt="Icono" style="width: 24px; height: 24px; margin-left: 10px;">
                         <p id="event-count" style="font-size: 24px; font-weight: bold; margin: 0; color: green;">110</p>
@@ -89,7 +112,7 @@
                 </div>
             </div>
         </div>
-        <div style="position: absolute; bottom: 0px; left: 0; right: 0; padding: 20px; color: rgb(255, 255, 255);background-color: rgba(21, 125, 17, 0.8); border-radius: 8px; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);">
+        <div style="position: absolute; bottom: 0px; left: 0; right: 0; padding: 20px; color: rgb(255, 255, 255);">
             <h2 style="text-align: center; margin-top: 0;"><strong>About This</strong></h2>
             <p style="text-align: justify; margin-bottom: 0; color: rgb(255, 255, 255);">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur non libero vel eros accumsan egestas. Nulla facilisi. Proin vel lacus vel elit luctus luctus a sit amet ligula.
@@ -101,7 +124,8 @@
             <div class="row align-items-center justify-content-center">
                 <div class="col-md-7">
                     <br>
-                    <h3 id="form-title">Regístrate <strong></strong></h3>
+                    <h3 id="form-title" style="font-weight: bold;">Regístrate <strong></strong></h3>
+                    <p id="registration-message" style="color: black; text-align: justify; ">Para inscribirte a este evento, es necesario que tengas una cuenta</p>
                     <div class="language-switch">
                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                             <path fill="#f1c142" d="M1 10H31V22H1z"></path>
@@ -130,15 +154,15 @@
                         <div class="form-column">
                             <div class="form-group">
                                 <label id="username-label" for="username" data-es="Usuario" data-en="Username">Usuario</label>
-                                <input type="text" class="form-control" id="username" name="username" placeholder="Usuario" required>
+                                <input type="text" class="form-control" id="username" name="username" required>
                             </div>
                             <div class="form-group">
                                 <label id="email-label" for="email" data-es="Correo electrónico" data-en="Email">Correo electrónico</label>
-                                <input type="text" class="form-control" id="email" name="email" placeholder="Correo electrónico" required>
+                                <input type="text" class="form-control" id="email" name="email" required>
                             </div>
                             <div class="form-group">
                                 <label id="documentNumber-label" for="documentNumber" data-es="Número de Documento" data-en="Document Number">Número de Documento</label>
-                                <input type="number" class="form-control" id="documentNumber" name="documentNumber" placeholder="Número de Documento" required>
+                                <input type="number" class="form-control" id="documentNumber" name="documentNumber"  required>
                             </div>                            
                             <div class="form-group nationality-statement-group">
                                 <div class="form-subgroup">
@@ -326,16 +350,22 @@
 
         // Traducción de títulos y etiquetas
         document.getElementById('form-title').innerHTML = isEnglish ? 'Sign <strong>Up</strong>' : 'Regístrate <strong></strong>';
-        document.getElementById('username-label').textContent = isEnglish ? 'Username' : 'Usuario';
+        document.getElementById('username-label').textContent = isEnglish ? 'Complete Name' : 'Nombre Completo';
         document.getElementById('email-label').textContent = isEnglish ? 'Email' : 'Correo electrónico';
         document.getElementById('documentNumber-label').textContent = isEnglish ? 'Document Number' : 'Número de Documento';
         document.getElementById('nationality-label').textContent = isEnglish ? 'Nationality' : 'Nacionalidad';
         document.getElementById('statement-label').textContent = isEnglish ? 'Statement' : 'Estamento';
+            // Traducción del mensaje de inscripción
+        document.getElementById('registration-message').textContent = isEnglish 
+        ? "To register for this event, you need to have an account." 
+        : "Para inscribirte a este evento, es necesario que tengas una cuenta.";
 
-        // Traducción de placeholder
-        document.getElementById('username').placeholder = isEnglish ? 'example@mail.com' : 'Usuario';
-        document.getElementById('email').placeholder = isEnglish ? 'email@example.com' : 'Correo electrónico';
-        document.getElementById('documentNumber').placeholder = isEnglish ? 'Enter your document number' : 'Número de Documento';
+                // Traducción del texto del botón de inscripción
+        document.getElementById('signup-button').textContent = isEnglish 
+            ? "Sign Up" 
+            : "Inscribirme";
+
+
 
         // Traducción de opciones de selección (Nacionalidad)
         var nationalitySelect = document.getElementById('nationality');
