--- a/index.html
+++ b/index.html
@@ -89,7 +89,10 @@
         <h1>que te agrade?</h1>
         <p>Organiza un evento tú mismo, súbelo y deja que todos</p>
         <p>te conozcan</p>
-        <button type="submit" class="button2">Crea tus Eventos</button>
+        <a href="Gestion de eventos/index.html">
+
+            <button type="submit" class="button2">Crea tus Eventos</button>
+        </a>
     </div>
 
     <div></div>
