--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="body">
         <header>
             <nav>
-                <h1>EventInfo</h1>
+                <h1>Eventos USC</h1>
                 <ul>
                     <li><a href="#">inicio</a></li>
                     <li><a href="#">Ahora mismo</a></li>
