cambio y eliminacion de archivos innecesarios

--- a/dashboard.html
+++ b/dashboard.html
@@ -10,6 +10,6 @@
 <p>fecha evento</p>
 <h1>ESTADO</h1>
 <p>FInalizado</p>
-<a href="login.html">presiona auiq para registrate al evento</a>
+<a href="login.html">presiona Aqui para registrate al evento</a>
 </body>
 </html>
