--- a/login.html
+++ b/login.html
@@ -182,7 +182,7 @@
                             </div>
 
                             <div class="d-flex mb-5 align-items-center">
-                                <span class="ml-auto"><a href="a.html" id="forgot-pass" class="forgot-pass">¿Aún no tienes cuenta?</a></span>
+                                <span class="ml-auto"><a href="registro.html" id="forgot-pass" class="forgot-pass">¿Aún no tienes cuenta?</a></span>
                             </div>
 
                             <script src="https://accounts.google.com/gsi/client" async defer></script>
