--- a/registro.html
+++ b/registro.html
@@ -417,6 +417,15 @@
     }
 
 
+    fetch('http://localhost:8080/api/usuarios', { // Cambia la URL al endpoint de tu API
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(formData)
+        })
+
+
 
 
 
